force-app/main/default/objects/Accomodation_Request__c/Accomodation_Request__c.object-meta.xml
<CustomObject>
    <label>Заявка на заселение</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Имя записи</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Заявки на заселение</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>