force-app/main/default/objects/Accomodation_Request__c/fields/FX_Course__c.field-meta.xml
<CustomField>
    <fullName>FX_Course__c</fullName>
    <formula>Student__r.PersonContact.Group__r.Course__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Курс</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>