force-app/main/default/objects/Accomodation_Request__c/fields/FX_Student_Name__c.field-meta.xml
<CustomField>
    <fullName>FX_Student_Name__c</fullName>
    <formula>Student__r.PersonContact.LastName + &apos; &apos; + Student__r.PersonContact.FirstName + &apos; &apos; + Student__r.PersonContact.Patronymic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Имя студента</label>
    <type>Text</type>
</CustomField>