force-app/main/default/objects/Accomodation_Request__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Примечание</label>
    <type>TextArea</type>
</CustomField>