force-app/main/default/objects/Accomodation_Request__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Комната</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Заявки на заселение</relationshipLabel>
    <relationshipName>Accomodation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>