force-app/main/default/objects/Accomodation_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Статус</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Подана</fullName>
            </value>
            <value>
                <fullName>Документы приняты</fullName>
            </value>
            <value>
                <fullName>Одобрена</fullName>
            </value>
            <value>
                <fullName>Заселен</fullName>
            </value>
            <value>
                <fullName>Отклонена</fullName>
            </value>
            <value>
                <fullName>Отменена</fullName>
            </value>
            <value>
                <fullName>Выселен</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>