force-app/main/default/objects/Accomodation_Request__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Студент</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Заявки на заселение</relationshipLabel>
    <relationshipName>Accomodation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>