force-app/main/default/objects/Accomodation_Request__c/listViews/Accomodation_Requests_Documents_Accepted_Course_1.listView-meta.xml
<ListView>
    <fullName>Accomodation_Requests_Documents_Accepted_Course_1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Documents_Accepted</value>
    </filters>
    <filters>
        <field>FX_Course__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Заявки (документы приняты) - 1 курс</label>
</ListView>